--- a/cf/i18n/resources/en_US.all.json
+++ b/cf/i18n/resources/en_US.all.json
@@ -120,6 +120,11 @@
       "modified": false
    },
    {
+      "id": "   Optionally provide service-specific configuration parameters in a valid JSON object in-line:\n\n   CF_NAME create-service SERVICE PLAN SERVICE_INSTANCE -c '{\"name\":\"value\",\"name\":\"value\"}'\n\n   Optionally provide a file containing service-specific configuration parameters in a valid JSON object.\n\u0009 The path to the parameters file can be an absolute or relative path to a file:\n\n   CF_NAME create-service SERVICE_INSTANCE -c PATH_TO_FILE\n\n   Example of valid JSON object:\n   {\n      \"cluster_nodes\": {\n         \"count\": 5,\n         \"memory_mb\": 1024\n      }\n   }",
+      "translation": "   Optionally provide service-specific configuration parameters in a valid JSON object in-line:\n\n   CF_NAME create-service SERVICE PLAN SERVICE_INSTANCE -c '{\"name\":\"value\",\"name\":\"value\"}'\n\n   Optionally provide a file containing service-specific configuration parameters in a valid JSON object.\n\u0009 The path to the parameters file can be an absolute or relative path to a file:\n\n   CF_NAME create-service SERVICE_INSTANCE -c PATH_TO_FILE\n\n   Example of valid JSON object:\n   {\n      \"cluster_nodes\": {\n         \"count\": 5,\n         \"memory_mb\": 1024\n      }\n   }",
+      "modified": false
+   },
+   {
       "id": "   OrgAuditor - Read-only access to org info and reports\n",
       "translation": "   OrgAuditor - Read-only access to org info and reports\n",
       "modified": false
@@ -640,8 +645,8 @@
       "modified": false
    },
    {
-      "id": "CF_NAME create-service SERVICE PLAN SERVICE_INSTANCE [-c PARAMETERS_AS_JSON] [-t TAGS]\n\n  Optionally provide service-specific configuration parameters in a valid JSON object in-line:\n  CF_NAME create-service SERVICE PLAN SERVICE_INSTANCE -c '{\"name\":\"value\",\"name\":\"value\"}'\n\n  Optionally provide a file containing service-specific configuration parameters in a valid JSON object. The path to the parameters file can be an absolute or relative path to a file.\n  CF_NAME create-service SERVICE_INSTANCE -c PATH_TO_FILE\n\n\u0009Example of valid JSON object:\n  {\n    \"cluster_nodes\": {\n      \"count\": 5,\n      \"memory_mb\": 1024\n    }\n  }\n\nEXAMPLE:\n\u0009Linux/Mac:\n\u0009\u0009CF_NAME create-service db-service silver -c '{\"ram_gb\":4}'\n\n\u0009Windows Command Line\n\u0009\u0009CF_NAME create-service db-service silver -c \"{\\\"ram_gb\\\":4}\"\n\n\u0009Windows PowerShell\n\u0009\u0009CF_NAME create-service db-service silver -c '{\\\"ram_gb\\\":4}'\n\n\u0009CF_NAME create-service db-service silver mydb -c ~/workspace/tmp/instance_config.json\n\n\u0009CF_NAME create-service dbaas silver mydb -t \"list, of, tags\"\n\nTIP:\n   Use 'CF_NAME create-user-provided-service' to make user-provided services available to cf apps",
-      "translation": "CF_NAME create-service SERVICE PLAN SERVICE_INSTANCE [-c PARAMETERS_AS_JSON] [-t TAGS]\n\n  Optionally provide service-specific configuration parameters in a valid JSON object in-line:\n  CF_NAME create-service SERVICE PLAN SERVICE_INSTANCE -c '{\"name\":\"value\",\"name\":\"value\"}'\n\n  Optionally provide a file containing service-specific configuration parameters in a valid JSON object. The path to the parameters file can be an absolute or relative path to a file.\n  CF_NAME create-service SERVICE_INSTANCE -c PATH_TO_FILE\n\n\u0009Example of valid JSON object:\n  {\n    \"cluster_nodes\": {\n      \"count\": 5,\n      \"memory_mb\": 1024\n    }\n  }\n\nEXAMPLE:\n\u0009Linux/Mac:\n\u0009\u0009CF_NAME create-service db-service silver -c '{\"ram_gb\":4}'\n\n\u0009Windows Command Line\n\u0009\u0009CF_NAME create-service db-service silver -c \"{\\\"ram_gb\\\":4}\"\n\n\u0009Windows PowerShell\n\u0009\u0009CF_NAME create-service db-service silver -c '{\\\"ram_gb\\\":4}'\n\n\u0009CF_NAME create-service db-service silver mydb -c ~/workspace/tmp/instance_config.json\n\n\u0009CF_NAME create-service dbaas silver mydb -t \"list, of, tags\"\n\nTIP:\n   Use 'CF_NAME create-user-provided-service' to make user-provided services available to cf apps",
+      "id": "CF_NAME create-service SERVICE PLAN SERVICE_INSTANCE [-c PARAMETERS_AS_JSON] [-t TAGS]",
+      "translation": "CF_NAME create-service SERVICE PLAN SERVICE_INSTANCE [-c PARAMETERS_AS_JSON] [-t TAGS]",
       "modified": false
    },
    {
@@ -1862,6 +1867,11 @@
    {
       "id": "EXAMPLE:\n",
       "translation": "EXAMPLE:\n",
+      "modified": false
+   },
+   {
+      "id": "EXAMPLE:\n   Linux/Mac:\n      CF_NAME create-service db-service silver -c '{\"ram_gb\":4}'\n\n   Windows Command Line:\n      CF_NAME create-service db-service silver -c \"{\\\"ram_gb\\\":4}\"\n\n   Windows PowerShell:\n      CF_NAME create-service db-service silver -c '{\\\"ram_gb\\\":4}'\n\n   CF_NAME create-service db-service silver mydb -c ~/workspace/tmp/instance_config.json\n\n   CF_NAME create-service dbaas silver mydb -t \"list, of, tags\"",
+      "translation": "EXAMPLE:\n   Linux/Mac:\n      CF_NAME create-service db-service silver -c '{\"ram_gb\":4}'\n\n   Windows Command Line:\n      CF_NAME create-service db-service silver -c \"{\\\"ram_gb\\\":4}\"\n\n   Windows PowerShell:\n      CF_NAME create-service db-service silver -c '{\\\"ram_gb\\\":4}'\n\n   CF_NAME create-service db-service silver mydb -c ~/workspace/tmp/instance_config.json\n\n   CF_NAME create-service dbaas silver mydb -t \"list, of, tags\"",
       "modified": false
    },
    {
@@ -4107,6 +4117,11 @@
    {
       "id": "TIP:\n",
       "translation": "TIP:\n",
+      "modified": false
+   },
+   {
+      "id": "TIP:\n   Use 'CF_NAME create-user-provided-service' to make user-provided services available to cf apps",
+      "translation": "TIP:\n   Use 'CF_NAME create-user-provided-service' to make user-provided services available to cf apps",
       "modified": false
    },
    {
