--- a/cf/i18n/resources/zh_Hans.all.json
+++ b/cf/i18n/resources/zh_Hans.all.json
@@ -120,7 +120,7 @@
       "modified": false
    },
    {
-      "id": "   Optionally provide service-specific configuration parameters in a valid JSON object in-line:\n\n   CF_NAME create-service SERVICE PLAN SERVICE_INSTANCE -c '{\"name\":\"value\",\"name\":\"value\"}'\n\n   Optionally provide a file containing service-specific configuration parameters in a valid JSON object.\n\u0009 The path to the parameters file can be an absolute or relative path to a file:\n\n   CF_NAME create-service SERVICE_INSTANCE -c PATH_TO_FILE\n\n   Example of valid JSON object:\n   {\n      \"cluster_nodes\": {\n         \"count\": 5,\n         \"memory_mb\": 1024\n      }\n   }",
+      "id": "   Optionally provide service-specific configuration parameters in a valid JSON object in-line:\n\n   CF_NAME create-service SERVICE PLAN SERVICE_INSTANCE -c '{\"name\":\"value\",\"name\":\"value\"}'\n\n   Optionally provide a file containing service-specific configuration parameters in a valid JSON object.\n   The path to the parameters file can be an absolute or relative path to a file:\n\n   CF_NAME create-service SERVICE_INSTANCE -c PATH_TO_FILE\n\n   Example of valid JSON object:\n   {\n      \"cluster_nodes\": {\n         \"count\": 5,\n         \"memory_mb\": 1024\n      }\n   }",
       "translation": "   Optionally provide service-specific configuration parameters in a valid JSON object in-line:\n   CF_NAME create-service SERVICE PLAN SERVICE_INSTANCE -c '{\"name\":\"value\",\"name\":\"value\"}'\n\n   Optionally provide a file containing service-specific configuration parameters in a valid JSON object. The path to the parameters file can be an absolute or relative path to a file.\n   CF_NAME create-service SERVICE_INSTANCE -c PATH_TO_FILE\n\n   Example of valid JSON object:\n   {\n      \"cluster_nodes\": {\n         \"count\": 5,\n         \"memory_mb\": 1024\n      }\n   }",
       "modified": true
    },
@@ -1182,6 +1182,11 @@
    {
       "id": "Can provision instances of paid service plans (Default: disallowed)",
       "translation": "Can provision instances of paid service plans (Default: disallowed)",
+      "modified": false
+   },
+   {
+      "id": "Cannot delete service instance, service keys and bindings must first be deleted",
+      "translation": "无法删除服务实例，需要先删除服务密钥和绑定",
       "modified": false
    },
    {
@@ -5322,11 +5327,6 @@
    {
       "id": "{{.Usage}} {{.FormattedMemory}} x {{.InstanceCount}} instances",
       "translation": "{{.Usage}} {{.FormattedMemory}} 乘以 {{.InstanceCount}}实例数",
-      "modified": false
-   },
-   {
-      "id": "Cannot delete service instance, service keys and bindings must first be deleted",
-      "translation": "无法删除服务实例，需要先删除服务密钥和绑定",
       "modified": false
    }
 ]
